feat: rerank route (#84)
